# azure-mlops-demo

./: .gitignore  LICENSE  README.md  setup.cfg
.devops/workflows/: build.yml
.github/workflows/: build.yml
src/azml/: batch_score.py  deploy_model.py  evalute_model.py  register_model.py  run_batch.py  run_experiment.py  util.py
src/birds/: datasets.py  download_data.py  score_model.py  train_model.py
tests/: conftest.py  test_data.py  test_features.py
