[metadata]
name=azure-mlops-demo
version=0.1.0
# description=
# author=
# author_email=
# url=

[options]
package_dir=
    =src
packages=find:
python_requires=>=3.8
install_requires=
    mlflow==1.15.0
    torch==1.7.1
    torchvision==0.2.2.post3

[options.packages.find]
where=src

[options.extras_require]
azure=
    azure-cli-core
    azureml-dataprep
    azureml-core
    azureml-train-core
    azureml-pipeline-core
    azureml-pipeline-steps
    azureml-mlflow
interactive=
    jupyter
    matplotlib
dev=
    flake8
    pytest
    coverage

[options.entry_points]
console_scripts=
    train_local=birds.train_model:main
    score_local=birds.score_model:main
    train_on_azure=azml.run_experiment:main
    score_on_azure=azml.run_batch:main

[flake8]
max-line-length = 120
max-complexity = 10

[tool:pytest]
addopts = -W ignore::DeprecationWarning

[coverage:run]
disable_warnings = no-data-collected